Lab1/412510020_lab1/Lab1/multip_2num_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../src/Multiplication.cpp in debug mode
csim.mk:79: recipe for target 'obj/Multiplication.o' failed
../../../src/Multiplication.cpp:3:1: error: expected unqualified-id before '{' token
 {
 ^
make: *** [obj/Multiplication.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
